==> ataweg/esp32-httpd-demo/components/libesphttpd/util/cgiwifi.c <==
#define LOG_LOCAL_LEVEL    ESP_LOG_INFO
#include "esp_log.h"
#define S( str ) ( str == NULL ? "<null>": str )
#include <libesphttpd/esp.h>
#include "libesphttpd/cgiwifi.h"
#define CONNTRY_IDLE       0
#define CONNTRY_WORKING    1
#define CONNTRY_SUCCESS    2
#define CONNTRY_FAIL       3

CgiStatus ICACHE_FLASH_ATTR cgiWiFiConnect( HttpdConnData *connData )
{
   ESP_LOGD( TAG, "cgiWiFiConnect" );

   if( connData->isConnectionClosed )
   {
      // Connection aborted. Clean up.
      return HTTPD_CGI_DONE;
   }

   char essid[32];
   char password[64];
   static os_timer_t reassTimer;

   httpdFindArg( connData->post.buff, "essid", essid, sizeof( essid ) );
   httpdFindArg( connData->post.buff, "password", password, sizeof( password ) );

   strncpy( ( char* )stconf.ssid, essid, 32 );
   strncpy( ( char* )stconf.password, password, 64 );
   ESP_LOGI( TAG, "Try to connect to AP \"%s\" pw \"%s\"", essid, password );

   // Schedule disconnect/connect
   os_timer_disarm( &reassTimer );
   os_timer_setfn( &reassTimer, reassTimerCb, NULL );
// Set to 0 if you want to disable the actual reconnecting bit
#ifdef DEMO_MODE
   httpdRedirect( connData, "/wifi" );
#else
   os_timer_arm( &reassTimer, 500, 0 );
   httpdRedirect( connData, "connecting.html" );
#endif
   return HTTPD_CGI_DONE;
}

CgiStatus ICACHE_FLASH_ATTR cgiWiFiConnStatus( HttpdConnData *connData )
{
   ESP_LOGD( TAG, "cgiWiFiConnStatus" );

   if( connData->isConnectionClosed )
   {
      // Connection aborted. Clean up.
      return HTTPD_CGI_DONE;
   }

   char buff[128];
   int len;
   struct ip_info info;
   int st = wifi_station_get_connect_status();

   httpdStartResponse( connData, 200 );
   httpdHeader( connData, "Content-Type", "text/json" );
   httpdEndHeaders( connData );

   if( connTryStatus == CONNTRY_IDLE )
   {
      len = sprintf( buff, "{\n \"status\": \"idle\"\n }\n" );
   }
   else if( connTryStatus == CONNTRY_WORKING || connTryStatus == CONNTRY_SUCCESS )
   {
      if( st == STATION_GOT_IP )
      {
         wifi_get_ip_info( 0, &info );
         len = sprintf( buff, "{\n \"status\": \"success\",\n \"ip\": \"%d.%d.%d.%d\" }\n",
                        ( info.ip.addr >> 0 ) & 0xff, ( info.ip.addr >> 8 ) & 0xff,
                        ( info.ip.addr >> 16 ) & 0xff, ( info.ip.addr >> 24 ) & 0xff );
         // Reset into AP-only mode sooner.
         os_timer_disarm( &resetTimer );
         os_timer_setfn( &resetTimer, resetTimerCb, NULL );
         os_timer_arm( &resetTimer, 1000, 0 );
      }
      else
      {
         len = sprintf( buff, "{\n \"status\": \"working\"\n }\n" );
      }
   }
   else
   {
      len = sprintf( buff, "{\n \"status\": \"fail\"\n }\n" );
   }

   httpdSend( connData, buff, len );
   return HTTPD_CGI_DONE;
}

CgiStatus ICACHE_FLASH_ATTR tplWlan( HttpdConnData *connData, char *token, void **arg )
{
   ESP_LOGD( TAG, "tplWlan token %s", S( token ) );

   if( connData->isConnectionClosed )
   {
      // Connection aborted. Clean up.
      return HTTPD_CGI_DONE;
   }

   char buff[256];
   int opmode;
   static struct station_config stconf;
   if( token == NULL ) return HTTPD_CGI_DONE;
   wifi_station_get_config( &stconf );

   strcpy( buff, "Unknown" );
   if( strcmp( token, "WiFiMode" ) == 0 )
   {
      opmode = wifi_get_opmode();
      if( opmode == STATION_MODE )   strcpy( buff, "Station" );
      if( opmode == SOFTAP_MODE )    strcpy( buff, "SoftAP" );
      if( opmode == STATIONAP_MODE ) strcpy( buff, "Station + SoftAP" );
   }
   else if( strcmp( token, "WiFiCurrSsid" ) == 0 )
   {
      strcpy( buff, ( char* )stconf.ssid );
   }
   else if( strcmp( token, "WiFiPassword" ) == 0 )
   {
      strcpy( buff, ( char* )stconf.password );
   }
   else if( strcmp( token, "WiFiApWarn" ) == 0 )
   {
      opmode = wifi_get_opmode();
      if( opmode == SOFTAP_MODE )
      {
         strcpy( buff, "<b>Can't scan in this mode.</b> Click <a href=\"wifi/setmode.cgi?mode=1\">here</a> to go to Station mode."
                       " or <a href=\"wifi/setmode.cgi?mode=3\">here</a> to go to Station + SoftAP mode." );
      }
      else if( opmode == STATIONAP_MODE )
      {
         strcpy( buff, "Click <a href=\"wifi/setmode.cgi?mode=1\">here</a> to go to Station mode"
                       " or <a href=\"wifi/setmode.cgi?mode=2\">here</a> to go to SoftAP mode." );
      }
      else  // STATION_MODE
      {
         strcpy( buff, "Click <a href=\"wifi/setmode.cgi?mode=3\">here</a> to go to Station + SoftAP mode"
                       " or <a href=\"wifi/setmode.cgi?mode=2\">here</a> to go to SoftAP mode." );
      }
   }
   httpdSend( connData, buff, -1 );
   return HTTPD_CGI_DONE;
}
