==> ataweg/esp32-httpd-demo/components/libesphttpd/util/esp32_cgiwifi.c <==
#define LOG_LOCAL_LEVEL    ESP_LOG_DEBUG
#include "esp_log.h"
#define S( str ) ( str == NULL ? "<null>": str )
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include "esp_event_loop.h"
#include "esp_wifi.h"
#include "libesphttpd/esp.h"
#include "libesphttpd/cgiwifi.h"
#include "httpd-platform.h"
#include "app_wifi.h"
#define GOOD_IP2STR( ip ) ( (ip )>>0 )&0xff, ( (ip )>>8 )&0xff,  ( (ip )>>16 )&0xff, ( (ip )>>24 )&0xff
#define CONNTRY_IDLE       0
#define CONNTRY_WORKING    1
#define CONNTRY_SUCCESS    2
#define CONNTRY_FAIL       3
#define SCAN_IDLE          0
#define SCAN_RUNING        1
#define SCAN_DONE          2
#define SCAN_INVALID       3

CgiStatus ICACHE_FLASH_ATTR cgiWiFiConnect( HttpdConnData *connData )
{
   ESP_LOGD( TAG, "cgiWiFiConnect ... " );

   char essid[128];
   char password[128];

   if( connData->isConnectionClosed )
   {
      // Connection aborted. Clean up.
      return HTTPD_CGI_DONE;
   }

   // stop scanning
   if( cgiWifiAps.scanInProgress != SCAN_IDLE )
   {
      ESP_LOGD( TAG, "cgiWiFiConnect: stop scan " );
      wifiStopScan();
      cgiWifiAps.scanInProgress = SCAN_IDLE;
      cgiWifiAps.noAps = 0;
   }

   int ssilen = httpdFindArg( connData->post.buff, "essid", essid, sizeof( essid ) );
   int passlen = httpdFindArg( connData->post.buff, "password", password, sizeof( password ) );

   if( ssilen == -1 || passlen == -1 )
   {
      ESP_LOGE( TAG, "Not rx needed args!" );
      httpdRedirect( connData, "/wifi" );
   }
   else
   {
      // get the current wifi configuration
      // check if we are in station mode
      if( ESP_OK == wifiGetConfig( WIFI_IF_STA, &wifi_config_cgi ) )
      {
         strncpy( ( char* )wifi_config_cgi.sta.ssid, essid, 32 );
         strncpy( ( char* )wifi_config_cgi.sta.password, password, 64 );
         ESP_LOGI( TAG, "Try to connect to AP \"%s\" pw \"%s\"", essid, password );

         // Set to 0 if you want to disable the actual reconnecting bit
  #ifdef DEMO_MODE
         httpdRedirect( connData, "/wifi" );
  #else
         // redirect & start connecting a little bit later
         // Schedule disconnect/connect in call back function
         connTryStatus = CONNTRY_IDLE;
         staConnectTimer = httpdPlatTimerCreate( "reconnectTimer", 1000, 0, staWiFiDoConnectCb, NULL );
         httpdPlatTimerStart( staConnectTimer );
  #endif
         httpdRedirect( connData, "/wifi/connecting.html" ); // -> "connstatus.cgi" -> cgiWiFiConnStatus()
      }
   }
   return HTTPD_CGI_DONE;
}

CgiStatus ICACHE_FLASH_ATTR cgiWiFiConnStatus( HttpdConnData *connData )
{
   ESP_LOGD( TAG, "cgiWiFiConnStatus: %d - %s", connTryStatus,
             connTryStatus == 0 ? "Idle"    :
             connTryStatus == 1 ? "Working" :
             connTryStatus == 2 ? "Success" :
                                  "Fail"    );
   char buff[128];
   int len;

   httpdStartResponse( connData, 200 );
   httpdHeader( connData, "Content-Type", "application/json" );
   httpdEndHeaders( connData );

   if( connTryStatus == CONNTRY_IDLE )
   {
      len = sprintf( buff, "{\n \"status\": \"idle\"\n }\n" );
   }
   else if( connTryStatus == CONNTRY_WORKING || connTryStatus == CONNTRY_SUCCESS )
   {
      int bits = xEventGroupWaitBits( wifi_event_group, WIFI_STA_CONNECTED, 0, 0, 0 );
      if( bits & WIFI_STA_CONNECTED )
      {
         tcpip_adapter_ip_info_t ipInfo;
         tcpip_adapter_get_ip_info( TCPIP_ADAPTER_IF_STA, &ipInfo );

         len = sprintf( buff, "{\"status\": \"success\", \"ip\": \""IPSTR"\"}", GOOD_IP2STR( ipInfo.ip.addr ) );
         // ESP_LOGD( TAG, "%s", buff );

         // Go to STA mode. Leave AP mode
         ESP_LOGD( TAG, "Got IP "IPSTR". Going into STA mode ...", GOOD_IP2STR( ipInfo.ip.addr ) );
         ESP_LOGD( TAG, "staCheckTimer ( 1000 )...." );
         staCheckTimer = httpdPlatTimerCreate( "staCheckTimer", 1000, 0, staWifiCheckConnStatusCb, NULL );
         httpdPlatTimerStart( staCheckTimer );
      }
      else
      {
         len = sprintf( buff, "{\n \"status\": \"working\"\n }\n" );
      }
   }
   else
   {
      len = sprintf( buff, "{\n \"status\": \"fail\"\n }\n" );
   }

   httpdSend( connData, buff, len );
   return HTTPD_CGI_DONE;
}

CgiStatus ICACHE_FLASH_ATTR tplWlan( HttpdConnData *connData, char *token, void **arg )
{
   char buff[256];
   wifi_config_t wifi_config = { 0 };    // ssid and password have the same location in .ap and .sta
   wifi_mode_t mode;
   esp_err_t err;

   if( token == NULL ) return HTTPD_CGI_DONE;
   strcpy( buff, "Unknown" );

   err = wifiGetCurrentMode( &mode );
   if( err != ESP_OK ) return HTTPD_CGI_DONE;

   // better to have two wifi_config variables, on for ap, one for sta
   // to cover also WiFi station + soft-AP mode
   if( mode & WIFI_MODE_AP )
   {
      wifiGetConfig( WIFI_IF_AP, &wifi_config );
      if( err != ESP_OK ) return HTTPD_CGI_DONE;

      // ESP_LOGD( TAG, "AP mode, \"%s\" \"%s\"", wifi_config.ap.ssid, wifi_config.ap.password );
   }

   if( mode & WIFI_MODE_STA )
   {
      int bits = xEventGroupWaitBits( wifi_event_group, WIFI_STA_CONNECTED, 0, 0, 0 );
      if( bits & WIFI_STA_CONNECTED )
      {
         err = wifiGetConfig( WIFI_IF_STA, &wifi_config );
         if( err != ESP_OK ) return HTTPD_CGI_DONE;

         // ESP_LOGD( TAG, "sta mode, connected \"%s\"", wifi_config.sta.ssid );
      }
      else
      {
         ESP_LOGD( TAG, "sta mode, disconnected" );
      }
   }
   else
   {
      ESP_LOGD( TAG, "NULL mode" );
   }

   if( strcmp( token, "WiFiMode" ) == 0 )
   {
      strcpy( buff, opmode2str( mode ) );
      // ESP_LOGD( TAG, "Wifi Mode: %s", buff );
   }
   else if( strcmp( token, "WiFiCurrSsid" ) == 0 )
   {
      strcpy( buff, ( char* )wifi_config.sta.ssid );
      // ESP_LOGD( TAG, "SSID: \"%s\"", buff );
   }
   else if( strcmp( token, "WiFiPassword" ) == 0 )
   {
      strcpy( buff, ( char* )wifi_config.sta.password );
      // ESP_LOGD( TAG, "Password: \"%s\"", buff );
   }
   else if( strcmp( token, "WiFiApWarn" ) == 0 )
   {
      if( mode == WIFI_MODE_AP )
      {
         strcpy( buff, "<b>Can't scan in this mode.</b> Click <a href=\"wifi/setmode.cgi?mode=3\">here</a> to go to Client+AP mode." );
      }
      else
      {
         strcpy( buff, "Click <a href=\"wifi/setmode.cgi?mode=2\">here</a> to go to standalone AP mode"
                       " or <a href=\"wifi/setmode.cgi?mode=3\">here</a> to go to Client+AP mode." );
      }
      // ESP_LOGD( TAG, "WiFiApWarn: \"%s\"", buff );
   }
   httpdSend( connData, buff, -1 );

   return HTTPD_CGI_DONE;
}
